--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,7 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/img/apple.png"
+  image_path: "assets/img/Logo.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
 
 
