--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   uuid: ^4.2.1
   intl: ^0.18.1
   lottie: ^3.0.0
+  logger: ^2.0.2+1
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
